2009-05-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add the LDFLAGS option -Wl,-zlazyload when using
	the Solaris linker.

2009-05-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/url.c (ReadURLImage): Fix typos.

2009-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (SystemCommand): Added access confirmation
	checks for external commands.

	* magick/unix_port.c (MagickSpawnVP): Added access confirmation
	checks for external commands.

	* coders/url.c (ReadURLImage): Added access confirmation checks
	for URLs.

	* magick/blob.c: Added access confirmation checks for files.

	* magick/confirm_access.c (MagickConfirmAccess): Added an access
	confirmation facility to allow the API user to monitor and/or
	block access to files and URLs.  This allows the API user to
	implement a security policy based on actual accesses.

2009-05-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Updated libpng to 1.2.35.

	* lcms: Updated lcms to 1.18a.

2009-05-01  Glenn Randers-Pehrson <glennrp@simple....>

        * coders/png.c (WriteOnePNGImage and WriteOneJNGImage):
        Changed internal attribute png_bit_depth to png:bit-depth-written
        to avoid confusion with planned new public png:bit-depth attribute.

2009-04-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImages): Deal slightly better with the
	case when MogrifyImage() expands one image into several.  Still
	don't know of a sane way to deal with -crop WIDTHxHEIGHT.

	* magick/transform.c (TransformImage): Image which is updated may
	be a list so account for that.

	* configure.ac: Add a test for the 'restrict' keyword so that
	eventually we can use it.

	* coders/jpeg.c (ReadJPEGImage): Tidy JPEG reader by moving JPEG
	properties analysis code into subroutines.

2009-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/display.imdoc: Fix documentation for crop and chop keyboard