@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2009-05-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> INSTALL-unix.txt: Apply patch regarding GnuWin32 from John Wye,
+        SourceForge #2779009.
+
+</UL>
+<p>
 2009-05-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
