@@ -1,3 +1,8 @@
+2009-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* INSTALL-unix.txt: Apply patch regarding GnuWin32 from John Wye,
+	SourceForge #2779009.
+
 2009-05-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* configure.ac: Add the LDFLAGS option -Wl,-zlazyload when using
